<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_beforArrive"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/beforArrive" />
        <item
            android:id="@+id/nav_curenccyConvet"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/curenccyConvet" />
        <item
            android:id="@+id/nav_metromap"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/metromap" />
        <item
            android:id="@+id/nav_usefull"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/usefull" />
        <item
            android:id="@+id/nav_kievmap"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/kievmap" />
        <item
            android:id="@+id/nav_razgovornik"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/razgovornik" />
        <item
            android:id="@+id/nav_marshruty"
            android:icon="@android:drawable/ic_menu_directions"
            android:title="@string/marshruty" />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@android:drawable/ic_menu_crop"
            android:title="@string/aboutus" />
    </group>


</menu>