<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="true"
    android:scrollbars="horizontal">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/firedept"
                android:id="@+id/textView5" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="101"
                android:id="@+id/button101" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/callpolice"
                android:id="@+id/textView3" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="102"
                android:id="@+id/button102" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/callmedic"
                android:id="@+id/textView4" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="103"
                android:id="@+id/button103" />
        </TableRow>



        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/informationcall"
                android:id="@+id/textView6" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="059"
                android:id="@+id/button59" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/textView7"
                android:text="@string/taxikv1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="058"
                android:id="@+id/button058" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/taxikv2"
                android:id="@+id/kievtax2" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="603"
                android:id="@+id/callkievtaxi2" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/taxikv3"
                android:id="@+id/textlvivtax" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="467 5 467"
                android:id="@+id/calllvivtaxi" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/callairoport"
                android:id="@+id/odessataksi" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" 393-43-71"
                android:id="@+id/airport" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/privatdoc"
                android:id="@+id/privatclin" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="238-00-00"
                android:id="@+id/callprivatclin1" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/privatdoc2"

                android:id="@+id/textClinic2" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1555"
                android:id="@+id/callprivatclinix2" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/callpizza"
                android:id="@+id/texttaxikark" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="377-73-55"
                android:id="@+id/pizzacall" />
        </TableRow>

    </TableLayout>
</ScrollView>
</LinearLayout>